--- a/pract03/views/index.haml
+++ b/pract03/views/index.haml
@@ -1,31 +1,27 @@
 %html
   %head
     %meta{'http-equiv' => 'Content-Type', :content => 'text/html'}
-    %title RPS
+    %title PPT
   %body
-    %ol
-      %h3 RPS
-      %a{:href => '?choice=rock'} Rock
-      %a{:href => '?choice=paper'} Paper
-      %a{:href => '?choice=scissors'} Scissors
-
-
-    %center
-      %h1 WELCOME TO THE GAME
-      %br
-
-    %center
-      %h2 Player 1
-      - if(player_throw == 'rock')
-        
-      - elsif (player_throw == 'scissors')
-      - elsif (player_throw == 'paper')
-
-      %h2 vs
-      
-      %h2 Player 2
-      - if(computer_throw == 'rock')
-      - elsif (computer_throw == 'scissors')
-      - elsif (computer_throw == 'paper')
     
-      %h3= answer
+    %center
+      %h1 Bienvenido al Juego: "PIEDRA PAPEL O TIJERA"
+      %br
+      %table{border: "1", height: "100", width: "350"}
+        %td
+          %center= answer
+      %br
+      %h3 Elija uno de los siguientes:
+      %br
+      %br
+      %a{:href => "?choice=roca"}
+        %img{alt: "piedra", hspace: "19", height: "100", border:"2", src: "http://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Rock-paper-scissors_(rock).png/70px-Rock-paper-scissors_(rock).png", width: "100"}/
+
+      %a{:href => "?choice=papel"}
+        %img{alt: "papel", hspace: "19", height: "100", border:"2", src: "http://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Rock-paper-scissors_(paper).png/70px-Rock-paper-scissors_(paper).png", width: "100"}/
+
+      %a{:href => "?choice=tijeras"}
+        %img{alt: "tijeras", hspace: "19", height: "100", border:"2", src: "http://upload.wikimedia.org/wikipedia/commons/thumb/5/5f/Rock-paper-scissors_(scissors).png/70px-Rock-paper-scissors_(scissors).png", width: "100"}/
+
+
+      
