--- a/pract04/views/index2.html
+++ b/pract04/views/index2.html
@@ -43,9 +43,7 @@
     </div><!-- /.navbar -->
 
     <div class="container">
-
-      <div class="row row-offcanvas">
-        <div class="col-xs-12 col-sm-9">
+        <div class="col-xs-12 col-sm-12">
           <p class="pull-right visible-xs">
             <button type="button" class="btn btn-primary btn-xs" data-toggle="offcanvas">Toggle nav</button>
           </p>
@@ -54,19 +52,22 @@
             <p>This is an example to show the potential of an offcanvas layout pattern in Bootstrap. Try some responsive-range viewport sizes to see it in action.</p>
           </div>
           <div class="col-6 col-sm-6 col-lg-4">
-            <h2>Heading</h2>
+            <img src="Piedra" alt="/public/images/piedra.png" class="img-rounded">
+            <h2>Piedra</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+            <p><a class="btn btn-default" href="#">Elegir &raquo;</a></p>
           </div><!--/span-->
           <div class="col-6 col-sm-6 col-lg-4">
-            <h2>Heading</h2>
+            <img src="Papel" alt="/public/images/papel.png" class="img-rounded">
+            <h2>Papel</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+            <p><a class="btn btn-default" href="#">Elegir &raquo;</a></p>
           </div><!--/span-->
           <div class="col-6 col-sm-6 col-lg-4">
-            <h2>Heading</h2>
+            <img src="Tijeras" alt="/public/images/tijeras.png" class="img-rounded">
+            <h2>Tijeras</h2>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#">View details &raquo;</a></p>
+            <p><a class="btn btn-default" href="#">Elegir &raquo;</a></p>
           </div><!--/span-->
         </div><!--/span-->
       </div>
