--- a/pract05/views/index3.haml
+++ b/pract05/views/index3.haml
@@ -78,8 +78,12 @@
               %center
                 %h2= answer
             %br
-            %br
-            %br
+            %h3 Victorias:
+            %p= estadistica['ganar']
+            %h3 Perdidas:
+            %p= estadistica['perder'] 
+            %h3 Empates: 
+            %p= estadistica['empatar']
             %br
           / /.well
         / /span
