--- a/pract05/views/index3.haml
+++ b/pract05/views/index3.haml
@@ -78,12 +78,15 @@
               %center
                 %h2= answer
             %br
-            %h3 Victorias:
-            %p= estadistica['ganar']
-            %h3 Perdidas:
-            %p= estadistica['perder'] 
-            %h3 Empates: 
-            %p= estadistica['empatar']
+            %h3 
+              Victorias:
+              = estadistica['ganar']
+            %h3 
+              Perdidas:
+              = estadistica['perder'] 
+            %h3 
+              Empates: 
+              = estadistica['empatar']
             %br
           / /.well
         / /span
