--- a/pract08/views/final.haml
+++ b/pract08/views/final.haml
@@ -1,3 +1,7 @@
+.barra-superior{align: "center"}
+  %h1 Jueguemos al ¡Tic Tac Toe!
+  %a{:href=>"/usuarios"}
+    Ver estadísticas
 .gameboard
   - HORIZONTALS.each do |row| 
     .gamerow
